<resources>
    <string name="app_name">KulturKlub</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- String used to set connect Parse -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">ISzmWVO0ecBTy5p5GDFcqSFdaJIlCWEK5KhKYUT6</string>
    <string name="back4app_client_key">xCkg2JpKwO2XryYMhuEqlab4EEu5GqPsfMXse6XJ</string>

    <!-- Text strings -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="KulturKlub">KulturKlub</string>
    <string name="registerLink"><u>Aún no tengo una cuenta</u></string>
    <string name="Register">Registrarse</string>
    <string name="username">Username</string>
    <string name="imageInput">Url de imagen</string>
    <string name="loginLink"><u>Ya tengo una cuenta</u></string>
    <string name="RegisterTitle">Nuevo usuario</string>
    <string name="nuevo">Nuevo</string>
    <string name="nuevoEvento">Nuevo Evento</string>
    <string name="titulo">Título</string>
    <string name="tipo">Tipo</string>
    <string name="descripcion">Descripción</string>
    <string name="lugar">Lugar</string>
    <string name="ciudad">Ciudad</string>
    <string name="fecha">Fecha (inicio)</string>
    <string name="Fechafin">(Fecha fin)</string>
    <string name="imgurl">Url de imagen</string>
    <string name="imagendeevento">Imagen del evento</string>
    <string name="guardar">GUARDAR</string>
    <string name="editEvent">Editar Evento</string>
    <string name="eliminarTitulo">Eliminar evento</string>
    <string name="question">¿Está seguro de que desea eliminar este evento?</string>
    <string name="cancel"><u>CANCELAR</u></string>
    <string name="eliminar">ELIMINAR</string>
    <string name="logout">Log out</string>
    <string name="organizador">Ver perfil de organizador</string>
    <string name="miuser">Mi cuenta</string>
    <string name="editUser">Editar Usuario</string>
    <string name="home">Lista de eventos</string>
</resources>